--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,10 +2,6 @@ name: Docker Image Build and Release
 
 on:
   push:
-    paths:
-      - actions-runner/**
-      - github-token-manager/**
-      - runpod/**
 
 jobs:
   bake:
@@ -14,12 +10,15 @@ jobs:
       matrix:
         context:
           - actions-runner
+          - git-tools
           - github-token-manager
           - runpod_260
           - runpod_280
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -39,41 +38,32 @@ jobs:
           echo "build_date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
           echo "short_commit=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
           echo -n "check_dir=" >> $GITHUB_OUTPUT
-          docker buildx bake -f docker-bake.hcl --print ${{ matrix.context }} | jq -r '.target."${{ matrix.context }}".context' >> $GITHUB_OUTPUT
-          echo -n "image_tag=" >> $GITHUB_OUTPUT
-          docker buildx bake -f docker-bake.hcl --print ${{ matrix.context }} | jq -r '.target."${{ matrix.context }}".tags[0]' >> $GITHUB_OUTPUT
+          BUILD_INFO=$(docker buildx bake -f docker-bake.hcl --print ${{ matrix.context }} | jq -c '.target."${{ matrix.context }}"')
+          BUILD_DIR=$(echo "$BUILD_INFO" | jq -r '.context')
+          DOCKERFILE=$(echo "$BUILD_INFO" | jq -r '.dockerfile')
+          IMAGE_TAG=$(echo "$BUILD_INFO" | jq -r '.tags[0]')
+          echo "dockerfile=$BUILD_DIR/$DOCKERFILE" >> $GITHUB_OUTPUT
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Check changes
-        id: changes
-        uses: dorny/paths-filter@v3
-        with:
-          filters: |
-            changed:
-            - '${{ steps.build_vars.outputs.check_dir }}/**'
-
-      - name: Build and load
-        id: build
-        uses: docker/bake-action@v6
-        if: steps.changes.outputs.changed == 'true'
-        env:
-          DOCKER_BUILD_RECORD_RETENTION_DAYS: 3
-        with:
-          load: true
-          targets: ${{ matrix.context }}
-
-      - name: Scan for vulnerabilities
-        id: scan
-        uses: crazy-max/ghaction-container-scan@v3
-        if: steps.build.outcome == 'success'
-        with:
-          image: ${{ steps.build_vars.outputs.image_tag }}
-          dockerfile: ./Dockerfile
-          severity_threshold: HIGH
-          annotations: true
+          CHANGED="false"
+          if [ "${{ github.event_name }}" = "push" ]; then
+            CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRT HEAD~ HEAD -- "$BUILD_DIR/" || true)
+            if [ -n "$CHANGED_FILES" ]; then
+              CHANGED="true"
+              echo "Changed files:"
+              echo "$CHANGED_FILES"
+            else
+              echo "No changes detected in $BUILD_DIR."
+            fi
+          else
+            echo "Can not detect changes for ${{ github.event_name }} events."
+          fi
+          echo "changed=$CHANGED" >> $GITHUB_OUTPUT
 
       - name: Build and push
+        id: build
         uses: docker/bake-action@v6
-        if: steps.scan.outcome == 'success'
+        if: steps.build_vars.outputs.changed == 'true'
         env:
           DOCKER_BUILD_RECORD_RETENTION_DAYS: 3
         with:
@@ -83,3 +73,13 @@ jobs:
             *.args.GITHUB_SHA=${{ github.sha }}
             *.args.GITHUB_SHA_SHORT=${{ steps.build_vars.outputs.short_commit }}
             *.args.BUILD_DATE=${{ steps.build_vars.outputs.build_date }}
+
+      - name: Scan for vulnerabilities
+        id: scan
+        uses: crazy-max/ghaction-container-scan@v3
+        if: steps.build.outcome == 'success'
+        with:
+          image: ${{ steps.build_vars.outputs.image_tag }}
+          dockerfile: ${{ steps.build_vars.outputs.dockerfile }}
+          severity_threshold: HIGH
+          annotations: true
