--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -1,12 +1,17 @@
 name: Manual Build and Release
+run-name: Build image for ${{ inputs.repository }}
 
 on:
   workflow_dispatch:
     inputs:
       repository:
-        description: Repository to build
+        description: Repository name with owner
         type: string
         required: true
+      ref:
+        description: The branch, tag or SHA to checkout
+        type: string
+        required: false
 
 jobs:
   docker:
@@ -25,6 +30,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: ${{ inputs.repository }}
+          ref: ${{ inputs.ref }}
           token: ${{ steps.auth.outputs.access-token }}
           submodules: true
 
