--- a/compass-runtime/requirements.txt
+++ b/compass-runtime/requirements.txt
@@ -1,36 +1,38 @@
-azure-identity==1.25.0
-azure-storage-blob==12.26.0
-azure-storage-queue==12.13.0
+azure-identity==1.25.1
+azure-storage-blob==12.27.0
+azure-storage-queue==12.14.0
 bidict==0.23.1
 cryptography==45.0.7 # rc:ignore
-duckdb==1.4.0
-filelock==3.19.1
+cudf-cu12==25.10.0
+duckdb==1.4.1
+filelock==3.20.0
 fsspec==2025.9.0
 hydra-core==1.3.2
 jinja2==3.1.6
-markupsafe==3.0.2
-mlflow==3.3.2
+markupsafe==3.0.3
+matplotlib==3.10.7
+mlflow==3.5.0 # rc:ignore
 mpmath==1.3.0
 networkx==3.5
-numpy==2.3.3
+numpy==2.2.6 # rc:ignore
 nvidia-ml-py==13.580.82
 omegaconf==2.3.0
 openpyxl==3.1.5
-pandas==2.3.2
-polars==1.33.1
+pandas==2.3.3
+polars==1.34.0
 pyaml==25.7.0
 pyarrow==21.0.0
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pyyaml==6.0.2
+pyyaml==6.0.3
 rabbitmq_amqp_python_client==0.1.0
 requests==2.32.5
 scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
-sympy==1.14.0
+sympy==1.13.1 # rc:ignore
 tensorboard==2.20.0
-torch==2.8.0
+torch==2.6.0 # rc:ignore
 typing_extensions==4.15.0
 tzdata==2025.2
