--- a/github-token-manager/Dockerfile
+++ b/github-token-manager/Dockerfile
@@ -1,20 +1,14 @@
 FROM python:3.13-alpine
 
-ARG GITHUB_SHA
-ARG GITHUB_SHA_SHORT
-ARG BUILD_DATE
 ARG APP_USER=app
 ARG APP_DIR=/app
-
-LABEL org.opencontainers.image.revision=$GITHUB_SHA \
-      org.opencontainers.image.created=$BUILD_DATE \
-      org.opencontainers.image.version=$GITHUB_SHA_SHORT \
-      org.opencontainers.image.source="https://github.com/FinAI-Infra/containers/tree/main/github-token-manager"
 
 RUN set -e; \
     apk update; \
     apk upgrade; \
     apk cache clean; \
+    pip install --upgrade pip; \
+    pip cache purge; \
     adduser -D -h $APP_DIR $APP_USER;
 
 USER $APP_USER
@@ -26,6 +20,7 @@ ENV PATH="${VIRTUAL_ENV}/bin:${PATH}"
 
 RUN set -e; \
     python -m venv .venv; \
-    pip install --no-cache -r requirements.txt;
+    pip install --no-cache -r requirements.txt; \
+    pip cache purge;
 
 CMD ["python", "main.py"]
