--- a/compass-runtime/requirements.txt
+++ b/compass-runtime/requirements.txt
@@ -1,8 +1,8 @@
 azure-identity==1.25.1
-azure-storage-blob==12.27.0
-azure-storage-queue==12.14.0
+azure-storage-blob==12.27.1
+azure-storage-queue==12.14.1
 bidict==0.23.1
-cryptography==45.0.7 # rc:ignore
+cryptography==46.0.3
 cudf-cu12==25.10.0
 duckdb==1.4.1
 filelock==3.20.0
@@ -14,24 +14,24 @@ matplotlib==3.10.7
 mlflow==3.5.0 # rc:ignore
 mpmath==1.3.0
 networkx==3.5
-numpy==2.2.6 # rc:ignore
+numpy==2.2.6 # rc:ignore numba 0.61.2 depends on numpy<2.3 and >=1.24
 nvidia-ml-py==13.580.82
 omegaconf==2.3.0
 openpyxl==3.1.5
 pandas==2.3.3
 polars==1.34.0
 pyaml==25.7.0
-pyarrow==21.0.0
+pyarrow==21.0.0 # rc:ignore mlflow 3.5.0 depends on pyarrow<22 and >=4.0.0
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyyaml==6.0.3
-rabbitmq_amqp_python_client==0.1.0
+rabbitmq_amqp_python_client==0.2.0
 requests==2.32.5
-scipy==1.16.2
+scipy==1.16.3
 setuptools==80.9.0
 six==1.17.0
-sympy==1.13.1 # rc:ignore
+sympy==1.13.1 # rc:ignore torch 2.6.0 depends on sympy==1.13.1
 tensorboard==2.20.0
 torch==2.6.0 # rc:ignore
 typing_extensions==4.15.0
