--- a/actions-runner/Dockerfile
+++ b/actions-runner/Dockerfile
@@ -5,5 +5,6 @@ RUN set -e; \
     sudo apt-get upgrade -y; \
     sudo apt-get install -y --no-install-recommends build-essential; \
     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash; \
+    sudo sh -c "$(curl -sL https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin; \
     sudo apt-get clean; \
     sudo rm -rf /var/lib/apt/lists/*;
